# openresponses-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: basic_usage.rs  direct_input.rs  env_config.rs  function_calling.rs  stateful_follow_up.rs  streaming.rs
src/: client.rs  lib.rs  streaming.rs
src/types/: content.rs  enums.rs  events.rs  items.rs  mod.rs  requests.rs  responses.rs  tools.rs
tests/: error_handling_test.rs  schema_compat_test.rs  streaming_protocol_test.rs  types_test.rs
