[package]
name = "openresponses-rust"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust client library for the Open Responses API specification"
license = "Apache-2.0"
repository = "https://github.com/yourusername/open-responses"
documentation = "https://docs.rs/open-responses"
readme = "README.md"
keywords = ["openai", "api", "llm", "responses", "client"]
categories = ["api-bindings", "web-programming"]
rust-version = "1.70"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1.35", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
eventsource-stream = "0.2"
bytes = "1.5"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "function_calling"
path = "examples/function_calling.rs"
